[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spaceships/ship6.png" type="Texture" id=1]
[ext_resource path="res://Popcorn1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 11 )

[node name="Popcorn1" type="Area2D"]
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
enemyspeed = 100

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="EventTimer" type="Timer" parent="."]
one_shot = true

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Popcorn1_body_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="EventTimer" to="." method="_on_EventTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
